<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:background="@drawable/clouds_in_the_sky_vertical_shot"
    tools:context=".ui.yandexweather.YandexWeatherFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:id="@+id/text_yandex_city"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            android:textSize="30sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toTopOf="@id/text_yandex_fact_temp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:text="Москва" />

        <TextView
            android:id="@+id/text_yandex_fact_temp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAlignment="viewEnd"
            android:textSize="65sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toStartOf="@id/image_yandex_fact_icon"
            app:layout_constraintHorizontal_chainStyle="packed"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/text_yandex_city"
            tools:text="+27°" />

        <ImageView
            android:id="@+id/image_yandex_fact_icon"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:scaleType="fitStart"
            app:layout_constraintBottom_toBottomOf="@+id/text_yandex_fact_temp"
            app:layout_constraintDimensionRatio="1:1"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@id/text_yandex_fact_temp"
            app:layout_constraintTop_toTopOf="@id/text_yandex_fact_temp"
            tools:srcCompat="@drawable/ovc" />

        <TextView
            android:id="@+id/text_yandex_fact_condition"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textAlignment="center"
            android:textSize="20sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/text_yandex_fact_temp"
            tools:text="облачно" />

        <TextView
            android:id="@+id/text_yandex_feels_like_sign"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/yandex_fells_like_sign"
            android:textSize="20sp"
            app:layout_constraintEnd_toStartOf="@+id/text_yandex_feels_like"
            app:layout_constraintHorizontal_chainStyle="packed"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/text_yandex_fact_condition" />

        <TextView
            android:id="@+id/text_yandex_feels_like"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="20sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/text_yandex_feels_like_sign"
            app:layout_constraintTop_toBottomOf="@id/text_yandex_fact_condition"
            tools:text="+25°" />

        <androidx.cardview.widget.CardView
            android:id="@+id/card_yandex_fact_details"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/card_view_layout_margin"
            android:backgroundTint="@color/light_blue_card_background_tint"
            app:cardCornerRadius="@dimen/card_corner_radius"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/text_yandex_feels_like">

            <TableLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="8dp">

                <TableRow>

                    <TextView
                        android:id="@+id/text_yandex_fact_wind_speed_sign"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="2"
                        android:text="@string/wind_speed"
                        android:textSize="@dimen/yandex_forecast_details_sign_text_dimen" />

                    <TextView
                        android:id="@+id/text_yandex_fact_wind_speed"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:textSize="@dimen/yandex_forecast_details_text_dimen"
                        tools:text="5 м/с" />

                </TableRow>

                <TableRow>

                    <TextView
                        android:id="@+id/text_yandex_fact_wind_dir_sign"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="2"
                        android:text="@string/wind_direction"
                        android:textSize="@dimen/yandex_forecast_details_sign_text_dimen" />

                    <TextView
                        android:id="@+id/text_yandex_fact_wind_dir"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:textSize="@dimen/yandex_forecast_details_text_dimen"
                        tools:text="В" />

                </TableRow>

                <TableRow>

                    <TextView
                        android:id="@+id/text_yandex_fact_pressure_sign"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="2"
                        android:text="@string/atm_pressure"
                        android:textSize="@dimen/yandex_forecast_details_sign_text_dimen" />

                    <TextView
                        android:id="@+id/text_yandex_fact_pressure"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:textSize="@dimen/yandex_forecast_details_text_dimen"
                        tools:text="756 мм.ртс" />

                </TableRow>

                <TableRow>

                    <TextView
                        android:id="@+id/text_yandex_fact_humidity_sign"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="2"
                        android:text="@string/humidity"
                        android:textSize="@dimen/yandex_forecast_details_sign_text_dimen" />

                    <TextView
                        android:id="@+id/text_yandex_fact_humidity"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:textSize="@dimen/yandex_forecast_details_text_dimen"
                        tools:text="34%" />

                </TableRow>
            </TableLayout>

        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/card_view_layout_margin"
            android:backgroundTint="@color/light_blue_card_background_tint"
            app:cardCornerRadius="@dimen/card_corner_radius"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/card_yandex_fact_details">

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/list_yandex_hour_forecast"
                android:layout_width="match_parent"
                android:layout_height="150dp"
                android:layout_margin="8dp"
                android:orientation="horizontal" />

        </androidx.cardview.widget.CardView>

    </androidx.constraintlayout.widget.ConstraintLayout>

    <include
        layout="@layout/bottom_sheet_yandex_forecasts_layout"
        tools:visibility="gone" />

</androidx.coordinatorlayout.widget.CoordinatorLayout>